--- a/CSEvaluation.tex
+++ b/CSEvaluation.tex
@@ -766,7 +766,7 @@ condition.
 %application deciding to cache information in memory when it fails to open a 
 %file.
 
-\subsection{Is CrashSimulator able to execute tests in a timely  manner?}
+\subsection{Is CrashSimulator able to execute tests efficiently?}
 \label{sec-perf}
 
 
