--- a/CSApproachDetails.tex
+++ b/CSApproachDetails.tex
@@ -114,17 +114,15 @@
     will be paid back as it is used
     repeatedly over time to test many different applications.
 
-    \preston{Maybe cut this paragraph in favor of the following example}
-    With this information in mind, a developer can construct the simple
-    mutation, for example:  ``make the {\tt open()} call return -1 with {\tt errno} set to
-    {\tt ENOENT}'', and use CrashSimulator to apply it to any application that
-    makes the specified calls, {\tt open ()} in this case.
-    Using these mutated traces can allow
-    CrashSimulator to perform a universal test for whether or not an
-    application correctly checks {\tt open()}'s return value.
+    %With this information in mind, a developer can construct the simple
+    %mutation, for example:  ``make the {\tt open()} call return -1 with {\tt errno} set to
+    %{\tt ENOENT}'', and use CrashSimulator to apply it to any application that
+    %makes the specified calls, {\tt open ()} in this case.
+    %Using these mutated traces can allow
+    %CrashSimulator to perform a universal test for whether or not an
+    %application correctly checks {\tt open()}'s return value.
 
-    \preston{Concrete example from one of the anomalies}
-    For a more concrete example of the above, consider an anomaly
+    As a more concrete example of the above, consider an anomaly
     involving unusual file types we will later address in our evaluation of
     CrashSimulator.  This anomaly appears when a call to {\tt stat()} or a similar system
     call returns a structure with a {\tt st\_mode} member containing an unexpected
