--- a/CSIntro.tex
+++ b/CSIntro.tex
@@ -12,7 +12,7 @@ occur~\cite{LinuxGlibcChanges}, file systems exhibit subtle but
 critical differences among each other~\cite{EXT4Layout, AppleHFS}, and differences
 in network behavior can be substantial, even in situations where the
 network type or even the adapter are identical~\cite{vbox}. These
-environmental differences greatly exacerbates the problems in ensuring
+environmental differences greatly exacerbate the problems in ensuring
 that an application functions correctly before it is deployed.
 
 A recent survey conducted by ClusterHQ~\cite{ClusterHQSurvey}
