--- a/CSIntro.tex
+++ b/CSIntro.tex
@@ -292,33 +292,34 @@ This paper makes the following contributions:
 \item{It offers an approach for encoding an appropriate flow of
     interactions between an application and its environment as a model that
     can be later used to check for correct behavior.}
-\item \thomas{The summary of the evaluation should be expanded and
-    beefed up (it should be at least as detailed as in the
-    abstract). Also, perhaps move this bullet point into a separate
-    paragraph after the enumeration for emphasis.}{It presents an implementation of
-    CrashSimulator that can implement the discussed approach to
-    successfully find bugs, both known and unknown.  Using this
-    prototype on popular applications, such as {\tt wc}, {\tt ftp},
-    {\tt vim}, and {\tt nano}, we found 84 bugs.}
 \end{enumerate}
 
-\thomas{I don't think that the introduction should end with an overview of the
-  paper. I prefer to
-  end the intro with a strong argument for why the paper should be accepted. In our
-  case, this is the summary of the evaluation and what is novel about
-  CrashSimulator. This way of organizing the intro also makes it
-  easier for the reviewer. The overview rarely adds anything meaningful. We
-  could even drop it altogether. Alternatively, move it to the
-  beginning of the next section.}
-In the remainder of this paper we
-offer additional details on CrashSimulator's operation.
-In section~\ref{sec:approach} we present the rationale for our system call trace
-and replay system and explain how anomalies are identified, extracted,
-converted, and injected while section~\ref{sec:evaluation} analyzes the results
-of testing conducted with the tool and evaluates its effectiveness at checking
-behavior in simulated environments.  Related work is discussed in
-section~\ref{sec:relatedwork} and we offer concluding thoughts and suggestions
-for future work in section~\ref{sec:conclusion}.
+This paper also introduces a proof of concept implementation of CrashSimulator's
+technique that was able to find bugs, both known and unknown, in popular Linux
+applications as ranked by Debian's popularity contest~\cite{DebPopCon}.  These
+bugs were found by exposing the applications to environmental conditions that
+simulate unusual file system configurations, file types, and network delays.
+When the applications in question were actually exposed to these conditions a
+variety of failures including hangs, crashes, and filesystem damage occurred.  In
+total, 84 bugs were identified.
+
+%\thomas{I don't think that the introduction should end with an overview of the
+%  paper. I prefer to
+%  end the intro with a strong argument for why the paper should be accepted. In our
+%  case, this is the summary of the evaluation and what is novel about
+%  CrashSimulator. This way of organizing the intro also makes it
+%  easier for the reviewer. The overview rarely adds anything meaningful. We
+%  could even drop it altogether. Alternatively, move it to the
+%  beginning of the next section.}
+%In the remainder of this paper we
+%offer additional details on CrashSimulator's operation.
+%In section~\ref{sec:approach} we present the rationale for our system call trace
+%and replay system and explain how anomalies are identified, extracted,
+%converted, and injected while section~\ref{sec:evaluation} analyzes the results
+%of testing conducted with the tool and evaluates its effectiveness at checking
+%behavior in simulated environments.  Related work is discussed in
+%section~\ref{sec:relatedwork} and we offer concluding thoughts and suggestions
+%for future work in section~\ref{sec:conclusion}.
 
 
 %%% Local Variables: 
