Make paper have correct format

--- a/CrashSimulator.tex
+++ b/CrashSimulator.tex
@@ -62,15 +62,19 @@
 % should be used if it is desired that the figures are to be displayed in
 % draft mode.
 %
-\documentclass[conference]{IEEEtran}
+\documentclass[sigconf,review, anonymous]{acmart}
+\acmConference[ISSTA 2018]{ACM SIGSOFT International Symposium on Software Testing and Analysis}{16–22 July, 2018}{Amsterdam, The Netherlands}
+\makeatletter
+\renewcommand\@formatdoi[1]{\ignorespaces}
+\makeatother
 \usepackage{booktabs}
 \usepackage{multirow}
 \usepackage{tabu}
 \usepackage{float}
 \usepackage{graphicx}
 \usepackage{caption}
-\usepackage[table,usenames,dvipsnames]{xcolor}
-\usepackage{peanutgallery}
+%\usepackage[table,usenames,dvipsnames]{xcolor}
+%\usepackage{peanutgallery}
 \usepackage{comment}
 %
 % If IEEEtran.cls has not been installed into the LaTeX system files,
@@ -133,24 +137,24 @@
 
 % *** GRAPHICS RELATED PACKAGES ***
 %
-\ifCLASSINFOpdf{}
-  % \usepackage[pdftex]{graphicx}
-  % declare the path(s) where your graphic files are
-  % \graphicspath{{../pdf/}{../jpeg/}}
-  % and their extensions so you won't have to specify these with
-  % every instance of \includegraphics
-  % \DeclareGraphicsExtensions{.pdf,.jpeg,.png}
-\else
-  % or other class option (dvipsone, dvipdf, if not using dvips). graphicx
-  % will default to the driver specified in the system graphics.cfg if no
-  % driver is specified.
-  % \usepackage[dvips]{graphicx}
-  % declare the path(s) where your graphic files are
-  % \graphicspath{{../eps/}}
-  % and their extensions so you won't have to specify these with
-  % every instance of \includegraphics
-  % \DeclareGraphicsExtensions{.eps}
-\fi
+%\ifCLASSINFOpdf{}
+%  % \usepackage[pdftex]{graphicx}
+%  % declare the path(s) where your graphic files are
+%  % \graphicspath{{../pdf/}{../jpeg/}}
+%  % and their extensions so you won't have to specify these with
+%  % every instance of \includegraphics
+%  % \DeclareGraphicsExtensions{.pdf,.jpeg,.png}
+%\else
+%  % or other class option (dvipsone, dvipdf, if not using dvips). graphicx
+%  % will default to the driver specified in the system graphics.cfg if no
+%  % driver is specified.
+%  % \usepackage[dvips]{graphicx}
+%  % declare the path(s) where your graphic files are
+%  % \graphicspath{{../eps/}}
+%  % and their extensions so you won't have to specify these with
+%  % every instance of \includegraphics
+%  % \DeclareGraphicsExtensions{.eps}
+%\fi
 % graphicx was written by David Carlisle and Sebastian Rahtz. It is
 % required if you want graphics, photos, etc. graphicx.sty is already
 % installed on most LaTeX systems. The latest version and documentation can
@@ -406,7 +410,7 @@
 
 \input{CSAbstract}
 
-\IEEEpeerreviewmaketitle{}
+%\IEEEpeerreviewmaketitle{}
 
 \input{CSIntro}
 
