Remove comment, fix date

--- a/CrashSimulator.tex
+++ b/CrashSimulator.tex
@@ -63,7 +63,7 @@
 % draft mode.
 %
 \documentclass[sigconf,review, anonymous]{acmart}
-\acmConference[ISSTA 2018]{ACM SIGSOFT International Symposium on Software Testing and Analysis}{16–22 July, 2018}{Amsterdam, The Netherlands}
+\acmConference[ISSTA 2018]{ACM SIGSOFT International Symposium on Software Testing and Analysis}{16-22 July, 2018}{Amsterdam, The Netherlands}
 \makeatletter
 \renewcommand\@formatdoi[1]{\ignorespaces}
 \makeatother
